force-app/main/default/objects/Customer_Profile__c/fields/Second_NCSP_Upsell_Type__c.field-meta.xml
<CustomField>
    <fullName>Second_NCSP_Upsell_Type__c</fullName>
    <inlineHelpText>Upsell Type related to Second Service Line</inlineHelpText>
    <label>Second NCSP Upsell Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Second_Service_Line__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CloudBlue</fullName>
            </value>
            <value>
                <fullName>Inventory Transfer</fullName>
            </value>
            <value>
                <fullName>Media Destruction</fullName>
            </value>
            <value>
                <fullName>Paper Destruction</fullName>
            </value>
            <value>
                <fullName>Service Frequency</fullName>
            </value>
            <value>
                <fullName>Storage Increase</fullName>
            </value>
            <value>
                <fullName>Supply Increase</fullName>
            </value>
            <value>
                <fullName>Library Move</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>