force-app/main/default/objects/Customer_Profile__c/fields/Second_Reason_No_Supply__c.field-meta.xml
<CustomField>
    <fullName>Second_Reason_No_Supply__c</fullName>
    <label>2nd Service Line Reason No Supply</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Second_Supplies_Order_Required__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Not Needed</fullName>
                <default>true</default>
                <label>Not Needed</label>
            </value>
            <value>
                <fullName>Account Manager Delivered</fullName>
            </value>
            <value>
                <fullName>Customer Provided</fullName>
            </value>
            <value>
                <fullName>Local Market Delivered</fullName>
            </value>
            <value>
                <fullName>On-Call Frequency</fullName>
            </value>
            <value>
                <fullName>Sales Rep Delivered</fullName>
            </value>
            <value>
                <fullName>Special Projects</fullName>
            </value>
            <value>
                <fullName>Third Party Handling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>