force-app/main/default/objects/Customer_Profile__c/fields/Second_Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Second_Service_Line__c</fullName>
    <description>If there are two service lines on this opportunity enter the additional service line in this field.</description>
    <inlineHelpText>If there are two service lines on this opportunity enter the additional service line in this field.</inlineHelpText>
    <label>Second Service Line</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NCSP_Service_Line__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>DMS</fullName>
            </value>
            <value>
                <fullName>One Time Shred</fullName>
            </value>
            <value>
                <fullName>RM</fullName>
            </value>
            <value>
                <fullName>Shred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>