force-app/main/default/objects/Customer_Profile__c/fields/Second_Supplies_Order_Required__c.field-meta.xml
<CustomField>
    <fullName>Second_Supplies_Order_Required__c</fullName>
    <label>2nd Service Line Supplies Order Required</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Second_Service_Line__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>