force-app/main/default/objects/Customer_Profile__c/fields/Selling_District__c.field-meta.xml
<CustomField>
    <fullName>Selling_District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>look up to the Market table</description>
    <inlineHelpText>The district that the sales rep is assigned to sell into. To find this value enter the District Name and then select the correct Owning District</inlineHelpText>
    <label>Selling District</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Customer Profiles (Selling District)</relationshipLabel>
    <relationshipName>Customer_Profiles1</relationshipName>
    <type>Lookup</type>
</CustomField>