force-app/main/default/objects/Customer_Profile__c/fields/Separate_DMS_Invoice_Needed__c.field-meta.xml
<CustomField>
    <fullName>Separate_DMS_Invoice_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used as merge field in email sent to the DMS billing team</description>
    <inlineHelpText>Required if DMS and Conversion Services selected</inlineHelpText>
    <label>Separate DMS Invoice Needed</label>
    <type>Checkbox</type>
</CustomField>