force-app/main/default/objects/Customer_Profile__c/fields/Service_District__c.field-meta.xml
<CustomField>
    <fullName>Service_District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>look up to the Market table – owning district</description>
    <inlineHelpText>The district that will physically provide services to the customer. To find this value enter the District Name and then select the correct Owning District</inlineHelpText>
    <label>Service District</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Customer Profiles</relationshipLabel>
    <relationshipName>Customer_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>