force-app/main/default/objects/Customer_Profile__c/fields/Shred_Quantity_65_Gallon_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Shred_Quantity_65_Gallon_Ordered__c</fullName>
    <label>Shred - Quantity Gallon Ordered</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>