force-app/main/default/objects/Customer_Profile__c/fields/Shred_Service_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Shred_Service_Frequency__c</fullName>
    <label>Shred Service Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Every 4 Weeks</fullName>
            </value>
            <value>
                <fullName>Every Other Month</fullName>
            </value>
            <value>
                <fullName>Every 8 Weeks</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>On-Call</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>