force-app/main/default/objects/Customer_Profile__c/fields/Shred_Service_Method__c.field-meta.xml
<CustomField>
    <fullName>Shred_Service_Method__c</fullName>
    <label>Shred Service Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On-Site</fullName>
            </value>
            <value>
                <fullName>Off-Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>