force-app/main/default/objects/Customer_Profile__c/fields/Special_Commission_Approval_Included__c.field-meta.xml
<CustomField>
    <fullName>Special_Commission_Approval_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used as merge field in email sent to the DMS billing team</description>
    <inlineHelpText>Required if DMS and Conversion Services selected</inlineHelpText>
    <label>Special Commission Approval Included</label>
    <type>Checkbox</type>
</CustomField>