force-app/main/default/objects/Customer_Profile__c/fields/Split_Commission_Rep__c.field-meta.xml
<CustomField>
    <fullName>Split_Commission_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>look up to the user table</description>
    <inlineHelpText>enter the sales rep&apos;s name who is receiving additional commissions credit for this opportunity</inlineHelpText>
    <label>Split Commission Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>