force-app/main/default/objects/Customer_Profile__c/fields/Split_Commission_Rep_from_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Split_Commission_Rep_from_Opportunity__c</fullName>
    <formula>Opportunity__r.Split_Commission_Rep__r.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Split_Commission_Rep__r.LastName</formula>
    <label>Split Commission Rep (from Opportunity)</label>
    <type>Text</type>
</CustomField>