force-app/main/default/objects/Customer_Profile__c/fields/Split_Commission_Rep_ID2__c.field-meta.xml
<CustomField>
    <fullName>Split_Commission_Rep_ID2__c</fullName>
    <description>The commissions ID pulled from the Split Commission Rep user record</description>
    <formula>Opportunity__r.Split_Commission_Rep__r.Commission_ID__c</formula>
    <inlineHelpText>The commissions ID auto populated from the Split Commission Rep  user record</inlineHelpText>
    <label>Split Commission Rep ID</label>
    <type>Text</type>
</CustomField>