force-app/main/default/objects/Customer_Profile__c/fields/Split_Commission_Rep_UserID__c.field-meta.xml
<CustomField>
    <fullName>Split_Commission_Rep_UserID__c</fullName>
    <formula>Split_Commission_Rep__c</formula>
    <label>Split Commission Rep UserID</label>
    <type>Text</type>
</CustomField>