force-app/main/default/objects/Customer_Profile__c/fields/Split_Rep_2_from_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Split_Rep_2_from_Opportunity__c</fullName>
    <formula>Opportunity__r.Split_Rep_2_Percent__c</formula>
    <label>Split Rep 2 % (from Opportunity)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>