force-app/main/default/objects/Customer_Profile__c/fields/Split_Rep_percent__c.field-meta.xml
<CustomField>
    <fullName>Split_Rep_percent__c</fullName>
    <description>percent of the deal to apply to the Split Commission Rep’s commission</description>
    <inlineHelpText>Enter the percent of the deal to apply to the Split Commission Rep’s commission</inlineHelpText>
    <label>Split Rep %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>