force-app/main/default/objects/Customer_Profile__c/fields/Supplies_Order_Required__c.field-meta.xml
<CustomField>
    <fullName>Supplies_Order_Required__c</fullName>
    <label>Supplies Order Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>