force-app/main/default/objects/Customer_Profile__c/fields/Total_number_of_catalogs_requested__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_catalogs_requested__c</fullName>
    <inlineHelpText>Number of tape backup catalogs that TCM will host</inlineHelpText>
    <label>Total number of catalogs requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>