force-app/main/default/objects/Customer_Profile__c/fields/What_backup_software_is_used__c.field-meta.xml
<CustomField>
    <fullName>What_backup_software_is_used__c</fullName>
    <inlineHelpText>Name of the backup software used to write data onto tapes</inlineHelpText>
    <label>What backup software is used?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>