force-app/main/default/objects/Customer_Profile__c/fields/What_is_the_operating_system__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_operating_system__c</fullName>
    <inlineHelpText>The name and operating system that the backup software was on</inlineHelpText>
    <label>What is the operating system?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>