force-app/main/default/objects/Customer_Profile__c/fields/What_is_the_software_version__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_software_version__c</fullName>
    <inlineHelpText>Version of the backup software</inlineHelpText>
    <label>What is the software version?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>