force-app/main/default/objects/Customer_Profile__c/recordTypes/CPQ_Customer_Profile.recordType-meta.xml
<RecordType>
    <fullName>CPQ_Customer_Profile</fullName>
    <active>true</active>
    <label>CPQ Customer Profile</label>
</RecordType>