force-app/main/default/objects/Customer_Profile__c/recordTypes/Customer_Profile.recordType-meta.xml
<RecordType>
    <fullName>Customer_Profile</fullName>
    <active>true</active>
    <label>Customer Profile</label>
</RecordType>