force-app/main/default/objects/Customer_Profile__c/recordTypes/Customer_Profile_Intl.recordType-meta.xml
<RecordType>
    <fullName>Customer_Profile_Intl</fullName>
    <active>true</active>
    <label>Customer Profile Intl</label>
</RecordType>