force-app/main/default/objects/Customer_Profile__c/recordTypes/Read_Only_Customer_Profile.recordType-meta.xml
<RecordType>
    <fullName>Read_Only_Customer_Profile</fullName>
    <active>true</active>
    <label>Read Only Customer Profile</label>
</RecordType>