force-app/main/default/objects/Customer_Profile__c/validationRules/Customer_ID_for_Transfer.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_ID_for_Transfer</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( Customer_ID_for_Inventory_Transfer__c )),
OR(
NOT(ISPICKVAL(NCSP_Service_Line__c, &quot;RM&quot;)),
NOT(ISPICKVAL( Second_Service_Line__c , &quot;RM&quot;))
),
NOT(ISPICKVAL( Second_NCSP_Upsell_Type__c , &quot;Inventory Transfer&quot;)),
NOT(ISPICKVAL( NCSP_Upsell_Type__c , &quot;Inventory Transfer&quot;))
)</errorConditionFormula>
    <errorMessage>Customer ID for Inventory Transfer only applicable for Service Type of RM and Upsell Type of Inventory Transfer</errorMessage>
</ValidationRule>