force-app/main/default/objects/Customer_Profile__c/validationRules/DMS_Type_Second.validationRule-meta.xml
<ValidationRule>
    <fullName>DMS_Type_Second</fullName>
    <active>true</active>
    <description>Requires that a user selected a DMS Type when the second service line is set to DMS.</description>
    <errorConditionFormula>AND(
(CONTAINS(TEXT( Second_Service_Line__c ) , &apos;DMS&apos;)),
ISBLANK( TEXT(DMS_Type__c) )
)</errorConditionFormula>
    <errorDisplayField>DMS_Type__c</errorDisplayField>
    <errorMessage>DMS Type must be selected if NCSP Second Service Line is DMS.</errorMessage>
</ValidationRule>