force-app/main/default/objects/Customer_Profile__c/validationRules/Group_Purchasing_Organization_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Group_Purchasing_Organization_Name</fullName>
    <active>true</active>
    <description>Conditionally require the Group Purchasing Organization Name when GPO (Group Purchasing Organization) is set to Yes.</description>
    <errorConditionFormula>AND(
ISPICKVAL( Group_Purchasing_Organization_GPO__c ,&apos;Other&apos;),
ISBLANK( Group_Purchasing_Organization_Name__c ))</errorConditionFormula>
    <errorDisplayField>Group_Purchasing_Organization_Name__c</errorDisplayField>
    <errorMessage>Please enter the Group Purchasing Organization Name.</errorMessage>
</ValidationRule>