force-app/main/default/objects/Customer_Profile__c/validationRules/Matching_Deal_and_Opportunity_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Matching_Deal_and_Opportunity_Type</fullName>
    <active>true</active>
    <description>Ensures that the deal type and opportunity type are the same or do not create any conflicts.</description>
    <errorConditionFormula>OR(AND( ISPICKVAL( Opportunity__r.Type , &quot;New Deal&quot;),OR( ISPICKVAL(Deal_Type__c, &quot;New Service Line&quot;),   ISPICKVAL(Deal_Type__c, &quot;Department Add&quot;),ISPICKVAL(Deal_Type__c, &quot;Upsell&quot;))), AND( ISPICKVAL(Opportunity__r.Type , &quot;Up-Sell/Lift&quot;), ISPICKVAL(Deal_Type__c, &quot;New Deal&quot;)))</errorConditionFormula>
    <errorMessage>Please select a deal type that corresponds with opportunity type.</errorMessage>
</ValidationRule>