force-app/main/default/objects/Customer_Profile__c/validationRules/Non_Standard_Setup_Required_Invoice.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Standard_Setup_Required_Invoice</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISPICKVAL(NCSP_Service_Line__c,&apos;DB&amp;R&apos;),
ISPICKVAL(NCSP_Service_Line__c,&apos;RM&apos;),
ISPICKVAL(Second_Service_Line__c,&apos;RM&apos;),
ISPICKVAL(NCSP_Service_Line__c,&apos;Shred&apos;),
ISPICKVAL(Second_Service_Line__c,&apos;Shred&apos;),
ISPICKVAL(NCSP_Service_Line__c,&apos;One Time Shred&apos;),
ISPICKVAL(Second_Service_Line__c,&apos;One Time Shred&apos;),
ISPICKVAL(NCSP_Service_Line__c,&apos;RM Pathology&apos;),
ISPICKVAL(NCSP_Service_Line__c,&apos;Vault Climate Control&apos;)),
ISPICKVAL(Non_Standard_Setup__c, &apos;Yes&apos;),
ISPICKVAL(Invoice_Package__c, &apos;Invoice Package 2&apos;),
(ISPICKVAL( Deal_Type__c , &quot;New Deal&quot;) || ISPICKVAL(Deal_Type__c, &quot;New Service Line&quot;)),
(ISCHANGED(NCSP_Service_Line__c) || ISCHANGED(Second_Service_Line__c) || ISCHANGED(Deal_Type__c) || ISCHANGED(Non_Standard_Setup__c) || ISCHANGED(Invoice_Package__c))

)</errorConditionFormula>
    <errorDisplayField>Non_Standard_Setup__c</errorDisplayField>
    <errorMessage>When Invoice Package 2 is selected as the Invoice Package, the Standard Setup must be set to No.</errorMessage>
</ValidationRule>