force-app/main/default/objects/Customer_Profile__c/validationRules/Second_Upsell_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Second_Upsell_Type_Required</fullName>
    <active>true</active>
    <description>Requires a Second Upsell Type for One Time Shred, RM, and Shred</description>
    <errorConditionFormula>AND(

ISPICKVAL( Deal_Type__c , &quot;Upsell&quot;),

OR(
ISPICKVAL(Second_Service_Line__c,&apos;DB&amp;R&apos;),
ISPICKVAL(Second_Service_Line__c,&apos;RM&apos;),
ISPICKVAL(Second_Service_Line__c,&apos;Shred&apos;),
ISPICKVAL(Second_Service_Line__c,&apos;One Time Shred&apos;)),
ISBLANK(TEXT(Second_NCSP_Upsell_Type__c)),
ispickval( Opportunity__r.Type , &quot;Up-Sell/Lift&quot;)
)</errorConditionFormula>
    <errorDisplayField>Second_NCSP_Upsell_Type__c</errorDisplayField>
    <errorMessage>Please select a Second Upsell Type</errorMessage>
</ValidationRule>