force-app/main/default/objects/Customer_Profile__c/validationRules/Split_Percent.validationRule-meta.xml
<ValidationRule>
    <fullName>Split_Percent</fullName>
    <active>true</active>
    <description>Requires split percent for sales rep and split rep must total to 100%</description>
    <errorConditionFormula>OR(
((Sales_Rep_percent__c  +  Split_Rep_percent__c )  &lt;&gt; 1),
AND(ISBLANK( Split_Rep_percent__c ),  Sales_Rep_percent__c &lt;&gt; 1)
)</errorConditionFormula>
    <errorMessage>split percent for sales rep and split rep must total to 100%</errorMessage>
</ValidationRule>